tests/invalid/wrong_do_label.f77
PROGRAM WRONGDO
INTEGER I
DO 10 I = 1, 3
PRINT *, I
10 PRINT *, 'fim'
END
